# django-agol-oauth2

./: Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
agol_auth/: junk.py
agol_oauth2/: admin.py  apps.py  backend.py  models.py  pipeline.py  urls.py  views.py
agol_oauth2/migrations/: 0001_initial.py
agol_oauth2/templates/: agol_login_button.html
agol_oauth2/templates/admin/: login.html
