[metadata]
name = django-agol-oauth2
version = 0.0.4
author = Travis Bock
author_email = tbock@innovateteam.com
description = Provide oauth2 agol login functionality to django projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Innovate-Inc/django-agol-oauth2
project_urls =
    Bug Tracker = https://github.com/Innovate-Inc/django-agol-oauth2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = agol_oauth2
python_requires = >=3.7
install_requires=
    django-localflavor
    social-auth-app-django
    requests
